--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: sans-serif;
+  position: relative;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  margin-bottom: 50px;
+  border-top: 10px solid #38df7d;
+}
+
+.container {
+  width: 800px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+  /* position: relative; */
+}
+
+.post-img {
+  width: 100%;
+  height: auto;
+}
+
+article {
+  margin-bottom: 50px;
+}
+
+.post-header {
+  margin-bottom: 30px;
+}
+
 h1,
 h2,
 h3,
@@ -27,10 +65,14 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 20px;
+  position: relative;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -42,10 +84,21 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+}
+li:last-child {
+  margin-bottom: 0;
 }
 
 /* footer p {
@@ -69,10 +122,6 @@ li {
   list-style: none;
 }
 
-.main-header {
-  background-color: #f7f7f7;
-}
-
 aside {
   background-color: #f7f7f7;
   /* border: 5px solid #1098ad; */
@@ -82,6 +131,8 @@ aside {
 
   /* border-right: 5px solid #1098ad;
   border-left: 5px solid #1098ad; */
+  padding: 50px 0;
+  width: 500px;
 }
 
 li:first-child {
@@ -92,9 +143,9 @@ li:last-child {
   font-style: italic;
 }
 
-li:nth-child(2) {
-  /* color: red; */
-}
+/* li:nth-child(2) {
+  color: red;
+} */
 
 /* Style link */
 
@@ -112,4 +163,43 @@ a:hover {
 
 a:active {
   background-color: #444;
+}
+
+nav a:link {
+  display: inline-block;
+  margin: 10px 20px 0 0;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+}
+
+h3 + p::first-line {
+  color: rebeccapurple;
+}
+
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  font-size: 16px;
+  padding: 20px 10px;
+  position: absolute;
+  /* display: inline-block; */
+  font-weight: bold;
+  top: -10px;
+  right: -25px;
 }
